:truck: Rename main class